@@ -1,8 +1,7 @@
 package com.clinicaregional.clinica.service.impl;
 
+
 import com.clinicaregional.clinica.dto.PacienteDTO;
-import com.clinicaregional.clinica.dto.TipoDocumentoDTO;
-import com.clinicaregional.clinica.dto.UsuarioDTO;
 import com.clinicaregional.clinica.dto.response.MyInfoPaciente;
 import com.clinicaregional.clinica.dto.response.PagedResponse;
 import com.clinicaregional.clinica.entity.Paciente;
@@ -13,19 +12,19 @@ import com.clinicaregional.clinica.exception.ResourceNotFoundException;
 import com.clinicaregional.clinica.mapper.PacienteMapper;
 import com.clinicaregional.clinica.repository.PacienteRepository;
 import com.clinicaregional.clinica.service.PacienteService;
+import com.clinicaregional.clinica.service.S3ServicePublic;
 import com.clinicaregional.clinica.service.TipoDocumentoService;
 import com.clinicaregional.clinica.service.UsuarioService;
 import com.clinicaregional.clinica.util.FiltroEstado;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.DuplicateFormatFlagsException;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Page;
+import org.springframework.web.multipart.MultipartFile;
 
 @Service
 public class PacienteServiceImpl implements PacienteService {
@@ -35,6 +34,7 @@ public class PacienteServiceImpl implements PacienteService {
     private final TipoDocumentoService tipoDocumentoService;
     private final UsuarioService usuarioService;
     private final FiltroEstado filtroEstado;
+    private final S3ServicePublic s3Service;
 
     @Autowired
     public PacienteServiceImpl(
@@ -42,30 +42,33 @@ public class PacienteServiceImpl implements PacienteService {
             PacienteMapper pacienteMapper,
             TipoDocumentoService tipoDocumentoService,
             UsuarioService usuarioService,
-            FiltroEstado filtroEstado) {
+            FiltroEstado filtroEstado, S3ServicePublic s3Service) {
         this.pacienteRepository = pacienteRepository;
         this.pacienteMapper = pacienteMapper;
         this.tipoDocumentoService = tipoDocumentoService;
         this.usuarioService = usuarioService;
         this.filtroEstado = filtroEstado;
+        this.s3Service = s3Service;
     }
 
     @Transactional(readOnly = true)
     @Override
     public List<PacienteDTO> listarPacientes() {
         filtroEstado.activarFiltroEstado(true);
-        return pacienteRepository.findAll()
+        List<PacienteDTO> pacientes = pacienteRepository.findAll()
                 .stream()
                 .map(pacienteMapper::mapToPacienteDTO)
-                .collect(Collectors.toList());
+                .toList();
+        return pacientes.stream().map(this::agregarUrlImage).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
     @Override
     public Optional<PacienteDTO> getPacientePorId(Long id) {
         filtroEstado.activarFiltroEstado(true);
-        return pacienteRepository.findByIdAndEstadoIsTrue(id)
+        Optional<PacienteDTO> paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .map(pacienteMapper::mapToPacienteDTO);
+        return paciente.map(this::agregarUrlImage);
                 
     }
 
@@ -73,8 +76,9 @@ public class PacienteServiceImpl implements PacienteService {
     @Override
     public Optional<PacienteDTO> getPacientePorIdentificacion(String identificacion) {
         filtroEstado.activarFiltroEstado(true);
-        return pacienteRepository.findByNumeroIdentificacion(identificacion)
+        Optional<PacienteDTO> paciente = pacienteRepository.findByNumeroIdentificacion(identificacion)
                 .map(pacienteMapper::mapToPacienteDTO);
+        return paciente.map(this::agregarUrlImage);
     }
 
     @Transactional(readOnly = true)
@@ -82,12 +86,16 @@ public class PacienteServiceImpl implements PacienteService {
     //despues agregar validacion de owner
     public MyInfoPaciente getMyInfoPaciente(Long pacienteId) {
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(pacienteId).orElseThrow(()->new ResourceNotFoundException("Paciente no encontrado con id" + pacienteId));
+        if (paciente.getImagenUrl() != null) {
+            String imageUrl = s3Service.generarUrlPublico(paciente.getImagenUrl());
+            paciente.setImagenUrl(imageUrl);
+        }
         return pacienteMapper.mapToMyInfoPaciente(paciente);
     }
 
     @Transactional
     @Override
-    public PacienteDTO crearPaciente(PacienteDTO pacienteDTO) {
+    public PacienteDTO crearPaciente(PacienteDTO pacienteDTO, MultipartFile imagen) {
         filtroEstado.activarFiltroEstado(true);
         if (pacienteRepository.findByNumeroIdentificacion(pacienteDTO.getNumeroIdentificacion()).isPresent()) {
             throw new DuplicateResourceException("Ya existe un paciente con ese número de identificación");
@@ -105,13 +113,18 @@ public class PacienteServiceImpl implements PacienteService {
             paciente.setUsuario(usuario);
         }
 
+        if (imagen != null) {
+            String key = s3Service.subirArchivo(imagen, "paciente" + paciente.getNombres());
+            paciente.setImagenUrl(key);
+        }
+
         Paciente savedPaciente = pacienteRepository.save(paciente);
-        return pacienteMapper.mapToPacienteDTO(savedPaciente);
+        return this.agregarUrlImage(pacienteMapper.mapToPacienteDTO(savedPaciente));
     }
 
     @Transactional
     @Override
-    public PacienteDTO actualizarPaciente(Long id, PacienteDTO pacienteDTO) {
+    public PacienteDTO actualizarPaciente(Long id, PacienteDTO pacienteDTO, MultipartFile imagen) {
         filtroEstado.activarFiltroEstado(true);
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado"));
@@ -131,8 +144,16 @@ public class PacienteServiceImpl implements PacienteService {
         paciente.setTipoSangre(pacienteDTO.getTipoSangre());
         paciente.setAntecedentes(pacienteDTO.getAntecedentes());
 
+        if (imagen != null) {
+            if (paciente.getImagenUrl() != null) {
+                s3Service.eliminarArchivo(paciente.getImagenUrl());
+            }
+            String key = s3Service.subirArchivo(imagen, "paciente" + paciente.getNombres());
+            paciente.setImagenUrl(key);
+        }
+
         Paciente updatedPaciente = pacienteRepository.save(paciente);
-        return pacienteMapper.mapToPacienteDTO(updatedPaciente);
+        return this.agregarUrlImage(pacienteMapper.mapToPacienteDTO(updatedPaciente));
     }
 
     @Transactional
@@ -143,6 +164,9 @@ public class PacienteServiceImpl implements PacienteService {
         paciente.setEstado(false); //borrado logico
         usuarioService.eliminar(paciente.getUsuario().getId());
         paciente.setUsuario(null);
+        if (paciente.getImagenUrl() != null) {
+            s3Service.eliminarArchivo(paciente.getImagenUrl());
+        }
         pacienteRepository.save(paciente);
     }
 
@@ -154,16 +178,25 @@ public class PacienteServiceImpl implements PacienteService {
         List<PacienteDTO> contenido = paginaPacientes.getContent()
                 .stream()
                 .map(pacienteMapper::mapToPacienteDTO)
-                .collect(Collectors.toList());
-
+                .toList();
+        List<PacienteDTO> contenidoWithUrlImage = contenido.stream().map(this::agregarUrlImage).toList();
         return new PagedResponse<>(
-                contenido,
+                contenidoWithUrlImage,
                 paginaPacientes.getNumber(),
                 paginaPacientes.getSize(),
                 paginaPacientes.getTotalElements(),
                 paginaPacientes.getTotalPages(),
                 paginaPacientes.isLast()
         );
+    }
+
+    //funcion para obtener el url
+    private PacienteDTO agregarUrlImage(PacienteDTO pacienteDTO) {
+        if (pacienteDTO.getImagenUrl() != null) {
+            String imageUrl = s3Service.generarUrlPublico(pacienteDTO.getImagenUrl());
+            pacienteDTO.setImagenUrl(imageUrl);
+        }
+        return pacienteDTO;
     }
 
 }
